--- a/src/components/buttons/circular-btn/circular-btn.scss
+++ b/src/components/buttons/circular-btn/circular-btn.scss
@@ -25,8 +25,8 @@
 }
 
 .color {
-  background-color: red;
+  background-color: $primary;
   &:hover {
-    background-color: darken(rgb(218, 3, 3), $amount: 2);
+    background-color: darken($primary, $amount: 2);
   }
 }
